sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: missing arguments for method plusPetitQue in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
		if (plusPetitQue(int i, int + 1)=true){
                    ^AlgBubbleSort1:7: error: missing arguments for method plusPetitQue in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
		if (plusPetitQue(int i, int i + 1)=false){
                    ^AlgBubbleSort1:8: error: not found: value int
			echange(int i, int i + 1);
                                ^